--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<title>"Reflective Homes</title>
+	<title>Reflective Homes</title>
 </head>
 <body>
 	<h1>Reflective Homes</h1>
