--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>EK Home Design</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <h1>EK Home Design</h1>
