--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -26,10 +26,10 @@
 </ul>
 
 
-<p>Before you get started, you'll want to see some examples of our previous work. <a href="#">Check out our work here.</a></p>
+<p>Before you get started, you'll want to see some examples of our previous work. <a href="#">Check out our work here</a></p>
 
 
-<p>Ready to get started? <a href="mailto:contact@ekhomedesign.com">Contact Us</a></p>
+<p id="contact">Ready to get started? <a href="mailto:contact@ekhomedesign.com">Contact Us</a></p>
 
 
 </body>
