--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -17,12 +17,12 @@
 				<a href="#">Contact</a>
 			</ul>
 		</nav>
-		<section id="two_column" class="clearfix">
-			<aside id="left">
+		<div id="content_wrapper" class="clearfix">
+			<section id="left">
 				<p>Before you get started, you'll want to see some examples of our previous work. <a href="#">Check out our work here</a></p>
 				<p id="contact">Ready to get started? <a href="mailto:contact@ekhomedesign.com">Contact Us</a></p>
-			</aside>
-			<article id="right">
+			</section>
+			<section id="right">
 				<p>At EK Home Design, we'll work with you to learn about your lifestyle and how you need your home to function. From there, we'll create a beautiful, functional space that is perfectly tailored to your lifestyle.</p>
 				<p>We specialize in the following spaces:</p>
 				<ul>
@@ -33,8 +33,8 @@
 					<li>Dens and ManCaves</li>
 					<li>Mudrooms</li>
 				</ul>
-			</article>
-		</section>
+			</section>
+		</div>
 		<footer class="clearfix">
 			<p>	&copy; 2018 EK Home Design</p>
 			<ul>
