Final Project Update

--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -19,6 +19,9 @@
 			</ul>
 		</nav>
 		<div id="content_wrapper" class="clearfix">
+			<section class ="header-img">
+				<img src="../unit_9/images/table-white-home-interior.png" alt="EK Home Design" title="EK Home Design" />
+			</section>
 			<section id="left">
 				<p>Before you get started, you'll want to see some examples of our previous work. <a href="#">Check out our work here</a></p>
 				<p id="contact">Ready to get started? <a href="mailto:contact@ekhomedesign.com">Contact Us</a></p>
